# pom-order

./: .gitignore  Makefile  README.md  idea.md  order.xlsx  pain.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: security-reviewer.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/api/routes/: customers.py  dashboard.py  fx_rates.py  health.py  order_items.py  orders.py  payments.py  products.py  public.py  scrape.py  shop_settings.py
backend/app/core/: security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit.py  catalog.py  customer.py  fx_rate.py  order.py  payment.py  shop.py
backend/app/schemas/: catalog.py  common.py  customer.py  dashboard.py  fx_rate.py  lookup.py  order.py  payment.py
backend/app/services/: __init__.py  audit.py  customer.py  fx_rate.py  lookup.py  order.py  order_calculations.py  order_status.py  payment.py  product.py  url_shortener.py
backend/app/services/scraper/: __init__.py  base.py  oliveyoung.py  shilladfs.py
backend/tests/: conftest.py
backend/tests/regression/: test_profit_calc.py
backend/tests/unit/: test_order_status.py
docs/: DESIGN-mvp.md  DESIGN.md  SCHEMA-PATCH.sql  TEST-PLAN.md  TODOS.md
frontend/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
scripts/: backup_db.sh  demo.py  install_backup_cron.sh  seed_real_orders.py
supabase/: config.toml  seed.sql
(+71 files in other folders)
